<resources>
    <string name="app_name">Autism Helper</string>
    <string name="progress_dialog">Please  Wait ...</string>
    <string name="title_activity_login">Login</string>
    <string name="doctor_panel">Dashboard</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_field_required">Email address is required</string>
    <string name="email_phone_field_required">Email address / Phone number is required</string>
    <string name="password_field_required">Password is required</string>
    <string name="name_field_required">Name is required</string>
    <string name="conf_password_field_required"> Confirm password is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="search_file">Search by file number or phone</string>
    <string name="create_exercise">Create new exercise</string>
    <string name="patients_file_title">All Patients files</string>
    <string name="contact_patient">Chat with patient</string>
    <string name="chat_doctors">Chat with doctors</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="no_parents_records">There are no parents records</string>
    <string name="passwords_dont_match">Passwords do not match !</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_doctors_records">There are no doctors records</string>
    <string name="action_settings">Settings</string>
    <string name="hint_password">Password</string>
    <string name="hint_email_phone">Email address / phone number</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Logout</string>
    <string name="name">Name</string>
    <string name="error_login">Incorrect Email address/Phone number or Password provided</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_doctor_main">DoctorMainActivity</string>
    <string name="title_activity_parent_main">ParentMainActivity</string>
    <string name="add_doctor_title">Add Doctor</string>
    <string name="delete_doctor_title">Delete Doctor</string>
    <string name="delete_parent_title">Delete Parent</string>
    <string name="action_logout">Logout</string>
    <string name="hint_email">Email address</string>
    <string name="hint_phone">Phone number</string>
    <string name="btn_link_to_login"> Already have an account ?</string>
    <string name="hint_specialized">Specialized</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="duplicate_account">Email address or Phone number is already exist!</string>
    <string name="scf_add_doctor">Doctor added successfully !</string>
    <string name="specialized_1">sp1</string>
    <string name="specialized_2">sp2</string>
    <string name="specialized_3">sp3</string>
    <string name="specialized_4">sp4</string>
    <string name="specialized_5">sp5</string>
    <string name="choose_doctor">Choose doctor : </string>
    <string name="choose_parent">Choose parent : </string>
    <string name="confirm_delete">Do you really want to delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint_conf_password">Confirm password</string>
    <string name="err_delete_doctor">Deleting doctor Failed</string>
    <string name="err_delete_parent">Deleting parent Failed</string>
    <string name="scf_delete_doctor">The doctor was deleted successfully</string>
    <string name="scf_delete_parent">The parent was deleted successfully</string>
    <string name="please_wait">Please Wait . . .</string>
    <string name="network_error">Cannot connect to Internet...Please check your connection!</string>
    <string name="server_error">The server could not be found. Please try again after some time!!</string>
    <string name="auth_failure_error">Cannot connect to Internet...Please check your connection!</string>
    <string name="parse_error">Parsing error! Please try again after some time!!</string>
    <string name="no_connection_error">Cannot connect to Internet...Please check your connection!</string>
    <string name="timout_error">Connection TimeOut! Please check your internet connection.</string>
    <string name="file_number">File Number</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="mother_name">Mother name</string>
    <string name="mother_age">Mother age</string>
    <string name="mother_nationality">Mother nationality</string>
    <string name="mother_edu_level">Mother education level</string>
    <string name="mother_job">Mother job</string>
    <string name="father_job">Father job</string>
    <string name="father_edu_level">Father education level</string>
    <string name="father_nationality">Father nationality</string>
    <string name="father_age">Father age</string>
    <string name="father_name">Father name</string>
    <string name="next">Next</string>
    <string name="is_there_relation_parent">Is there a relationship between the parents?</string>
    <string name="is_prenuptial_examinations">Did the parents do the prenuptial examinations ?</string>
    <string name="is_chronic_disease">Does one of the parents suffer from chronic disease ?</string>
    <string name="family_members">How many family members ?</string>
    <string name="male_members">How many male members ?</string>
    <string name="female_members">How many female members ?</string>
    <string name="birth_order">What is the child\'s birth order ?</string>
    <string name="child_relationship_parents">How is the relationship between the child and his parents ?</string>
    <string name="child_relationship_brothers">How is the relationship between the child and his brothers ?</string>
    <string name="babysitter">Do you count on a babysitter to care of the child ?</string>
    <string name="child_live_with_parent">Does the child live with his parents ?</string>
    <string name="is_polygamy">Is there any polygamy in the family ?</string>
    <string name="family_problems">What are the most important family problems?</string>
    <string name="is_divorce">Is there any divorce in the family ?</string>
    <string name="divorce_relationship">if the answer is yes, did one of parents marry for the second time?</string>
    <string name="second_partner_relationship">How is the relationship between the child and the second partner ?</string>
    <string name="swipe">Swipe</string>
    <string name="subject">Exercise subject</string>
    <string name="description">Description</string>
    <string name="field_required">This field is required</string>
    <string name="scf_add_exer">Exercise added successfully !</string>
    <string name="err_add_exer">Failed !!</string>
    <string name="my_exercises">My Exercises</string>
    <string name="no_records">There are no records yet!</string>
    <string name="youtube_link">Enter Link from youtube</string>
    <string name="must_be_youtube_link">This link is not from youtube, please enter valid link</string>
    <string name="child_name">Child Name</string>
    <string name="child_bdate">Child birth date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="child_sex">Child Sex</string>
    <string name="child_details">Child Information</string>
    <string name="mother_details">Mother Information</string>
    <string name="father_details">Father Information</string>
    <string name="relationship">Child Relationships</string>
    <string name="economic_level">Economic Level</string>
    <string name="high_level">High</string>
    <string name="above_intermediate_level">Above intermediate</string>
    <string name="intermediate_level">Intermediate</string>
    <string name="poor_level">Poor</string>
    <string name="living">Living</string>
    <string name="flat">Flat</string>
    <string name="villa">Villa</string>
    <string name="building">Building</string>
    <string name="health_status">Health status</string>
    <string name="genetic_diseases">Are there genetic diseases in the family?</string>
    <string name="genetic_diseases_list">What are the genetic diseases?</string>
    <string name="pregnancy_and_childbirth">Circumstances of pregnancy and childbirth</string>
    <string name="mother_age_birth">Mother\'s age during pregnancy</string>
    <string name="mental_stress">Did the mother suffer from mental stress?</string>
    <string name="pregnancy_after_abortion">Was pregnancy after abortion?</string>
    <string name="pregnancy_period">Pregnancy period</string>
    <string name="diseases_during_pregnancy">Diseases during the pregnancy if any</string>
    <string name="exp_radiation">Does the mother have any kind of radiation?</string>
    <string name="nutrition_mother">Mother\'s nutrition during pregnancy</string>
    <string name="birth_hospital">Have the mother given birth in the hospital?</string>
    <string name="easy_birth">Was the birth easy?</string>
    <string name="child_health">Child Health After Childbirth</string>
    <string name="vaccinations">Vaccinations against diseases and epidemics</string>
    <string name="neonatal_jaundice">Did the child suffer from neonatal jaundice after childbirth</string>
    <string name="child_overheated">Did the child suddenly feel overheated and not treated?</string>
    <string name="organic_injuries">Did the child have organic injuries such as recurrent diarrhea, allergies and smallpox, ...</string>
    <string name="sudden_injury">Have the child suffered a sudden injury (accident or otherwise)</string>
    <string name="congenital_defects_or_diseases">Does the child suffer from congenital defects or diseases</string>
    <string name="drugs_prescribed">The drugs are prescribed to the child</string>
    <string name="child_illness">Does the child complain of any health or psychological illness</string>
    <string name="child_illness_list">If yes, what is a child\'s health or psychological complaint?</string>
    <string name="child_development">Child development and health after childbirth</string>
    <string name="feeding">Chilf feeding</string>
    <string name="normal_feeding">Normal feeding</string>
    <string name="artificial_feeding">Artificial feeding</string>
    <string name="mixed_feeding">Mixed feeding</string>
    <string name="feeding_period">Feeding period</string>
    <string name="duration_weaning">Duration of weaning</string>
    <string name="normal_weaning">Normal weaning</string>
    <string name="advance_registration">Advance registration</string>
    <string name="cars_exam">CARS Exam</string>
    <string name="medical_history">Medical History</string>
    <string name="what_is_autism">What is Autism ?</string>
    <string name="exercises_list">Exercises</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="help_sction">Help section</string>
    <string name="profile">Profile</string>
</resources>