<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="project.aha.admin_panel.DeleteDoctorActivity">


    <Space
        android:layout_width="match_parent"
        android:layout_height="60px" />

    <Button
        android:id="@+id/create_exercise_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_exercise" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60px" />

    <Button
        android:id="@+id/patients_files_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patients_file_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60px" />

    <Button
        android:id="@+id/chat_doc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_doctors" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60px" />

    <Button
        android:id="@+id/chat_patient_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_patient" />
</LinearLayout>
