<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:orientation="vertical"
    tools:context=".admin_panel.AdminMainActivity">

    <Button
        android:id="@+id/add_doctor_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_doctor_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40px" />

    <Button
        android:id="@+id/delete_doctor_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_doctor_title" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="40px" />
    <Button
        android:id="@+id/delete_parent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_parent_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40px" />
</LinearLayout>
