<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="project.aha.parent_panel.ParentMainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/what_is_autism"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_autism"
                style="@style/MenuButton"
                android:drawableStart="@android:drawable/ic_menu_help"
                android:textAlignment="viewStart" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <Button
                android:id="@+id/advance_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MenuButton"
                android:text="@string/advance_registration"
                android:drawableStart="@android:drawable/ic_menu_edit"
                android:textAlignment="viewStart" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/cars_exam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cars_exam"
                style="@style/MenuButton"
                android:drawableStart="@android:drawable/ic_menu_compass"
                android:textAlignment="viewStart" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/med_hist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical_history"
                style="@style/MenuButton"
                android:drawableStart="@android:drawable/ic_menu_recent_history"
                android:textAlignment="viewStart" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/exercises_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercises_list"
                style="@style/MenuButton"
                android:drawableStart="@drawable/ic_exercises"
                android:textAlignment="viewStart" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/chat_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MenuButton"
                android:text="@string/chat_doctors"
                android:drawableStart="@android:drawable/stat_notify_chat"
                android:textAlignment="viewStart" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/help_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MenuButton"
                android:text="@string/help_sction"
                android:drawableStart="@android:drawable/ic_dialog_info"
                android:textAlignment="viewStart" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>
